--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "firebase": "^11.3.1",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.2",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
